<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.apptranslate.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_languageSelectionFragment"
            app:destination="@id/languageSelectionFragment" />
        <action
            android:id="@+id/action_homeFragment_to_functionSettingsFragment"
            app:destination="@id/functionSettingsFragment" />
        <action
        android:id="@+id/action_homeFragment_to_aiSettingsFragment"
        app:destination="@id/aiSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/translateFragment"
        android:name="com.example.apptranslate.ui.TranslateFragment"
        android:label="@string/nav_translate"
        tools:layout="@layout/fragment_translate">
        <action
            android:id="@+id/action_translateFragment_to_languageSelectionFragment"
            app:destination="@id/languageSelectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.example.apptranslate.ui.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.apptranslate.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/languageSelectionFragment"
        android:name="com.example.apptranslate.ui.LanguageSelectionFragment"
        android:label="Language Selection"
        tools:layout="@layout/fragment_language_selection" >
        <argument
            android:name="isSourceLanguage"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/functionSettingsFragment"
        android:name="com.example.apptranslate.ui.FunctionSettingsFragment"
        android:label="Function Settings"
        tools:layout="@layout/fragment_function_settings">
        <argument
            android:name="functionType"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/aiSettingsFragment"
        android:name="com.example.apptranslate.ui.AiSettingsFragment"
        android:label="@string/ai_settings_title"
        tools:layout="@layout/fragment_ai_settings" />

</navigation>
